Fix a z-index issue https://github.com/jonasmueller1/sac-pilatus-website/issues/106

--- a/symlink_stuff/files/theme-sac-pilatus/scss/components/_navbar.scss
+++ b/symlink_stuff/files/theme-sac-pilatus/scss/components/_navbar.scss
@@ -128,7 +128,7 @@ $color-level-2-hover: $dark;
 
           .dropdown-menu {
             position: absolute;
-            z-index: 1060; // The underlying buttons from the bootsrap carousel have z-index of 1054
+            z-index: 1054; // The underlying buttons from the bootsrap carousel have z-index of 1054
             left: 0;
             right: 0;
             height: auto;
